--- a/package.json
+++ b/package.json
@@ -26,19 +26,25 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
+    "@types/tcp-port-used": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^2.3.0",
+    "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
     "prettier": "^1.17.1",
+    "tcp-port-used": "^1.0.1",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.4.5"
   }
