--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "sourceMap": true,
     "outDir": "build"
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/__tests__/**.*"]
 }
