--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   shop-db:
-    image: mysql:8.0.16
+    image: mariadb:10.4.5 
     container_name: shop-db
     restart: on-failure
     environment:
