--- a/package.json
+++ b/package.json
@@ -29,8 +29,15 @@
     ]
   },
   "dependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/validator": "^10.11.0",
     "axios": "^0.18.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mariadb": "^2.0.5",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.8.6",
+    "sequelize-cli": "^5.4.0",
+    "sequelize-typescript": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
@@ -46,6 +53,7 @@
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
     "prettier": "^1.17.1",
+    "sequelize-auto-migrations": "^1.0.3",
     "tcp-port-used": "^1.0.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
