--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es6"],
     "target": "es2018",
     "module": "commonjs",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
@@ -19,5 +21,5 @@
     "outDir": "build"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/__tests__/**.*"]
+  "exclude": ["src/**/__tests__/**.*", "src/database/migrations/*.ts"]
 }
