--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "test:coverage": "jest --coverage",
+    "mig:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
+    "mig:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "start:dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node build/index.js"
@@ -30,7 +32,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.17.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.17"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
