--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
     "outDir": "build"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/__tests__/**.*"]
+  "exclude": ["src/**/__tests__/**.*", "src/database/migrations/*.ts"]
 }
