--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "jest --coverage",
     "mig:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "mig:run": "ts-node ./node_modules/.bin/typeorm migration:run",
+    "doc:api": "yarn swaggerGen -c ./swaggerConfig.json -p ./tsconfig.json ",
     "start:dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node build/index.js"
@@ -35,13 +36,17 @@
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.17"
+    "swagger-ui-express": "^4.0.5",
+    "typeorm": "^0.2.17",
+    "typescript-rest": "^2.0.1",
+    "typescript-rest-swagger": "^0.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
     "@types/tcp-port-used": "^1.0.0",
+    "@types/swagger-ui-express": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
