--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
@@ -45,8 +44,9 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
-    "@types/tcp-port-used": "^1.0.0",
+    "@types/supertest": "^2.0.7",
     "@types/swagger-ui-express": "^3.0.0",
+    "@types/tcp-port-used": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
@@ -56,6 +56,7 @@
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
     "prettier": "^1.17.1",
+    "supertest": "^4.0.2",
     "tcp-port-used": "^1.0.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
