--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "outDir": "build"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/__tests__/**.*", "src/database/migrations/*.ts"]
+  "exclude": ["src/database/migrations/*.ts"]
 }
