add department tests
With database init

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
-    "test:db": "dotenv -e test/.test.env -- docker-compose -f test/docker-compose.test.yml up --force-recreate -d",
-    "test": "dotenv -e test/.test.env -- jest",
-    "test:watch": "dotenv -e test/.test.env -- jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:env": "dotenv -e test/.test.env --",
+    "test:db:start": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate -d",
+    "test:db:stop": "yarn test:env docker-compose -f test/docker-compose.test.yml down",
+    "test": "yarn test:env jest",
+    "test:watch": "yarn test:env jest --watch",
+    "test:coverage": "yarn test:env jest --coverage",
     "mig:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "mig:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "doc:api": "yarn swaggerGen -c ./swaggerConfig.json -p ./tsconfig.json ",
