--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "test:env": "dotenv -e test/.test.env --",
     "test:db:start": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate -d",
     "test:db:stop": "yarn test:env docker-compose -f test/docker-compose.test.yml down",
-    "test": "yarn test:env jest",
-    "test:watch": "yarn test:env jest --watch",
-    "test:coverage": "yarn test:env jest --coverage",
+    "test": "yarn test:env jest --runInBand --verbose",
+    "test:watch": "yarn test --watch",
+    "test:coverage": "yarn test --coverage",
     "mig:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "mig:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "doc:api": "yarn swaggerGen -c ./swaggerConfig.json -p ./tsconfig.json ",
@@ -38,6 +38,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.17.1",
+    "ramda": "^0.26.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.0.5",
     "typeorm": "^0.2.17",
@@ -48,6 +49,7 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.2",
+    "@types/ramda": "^0.26.9",
     "@types/supertest": "^2.0.7",
     "@types/swagger-ui-express": "^3.0.0",
     "@types/tcp-port-used": "^1.0.0",
