run test in docker

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
     "test:env": "dotenv -e test/.test.env --",
-    "test:db:start": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate -d",
+    "test:db:start": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate -d shop-db",
+    "test:docker:run": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate shop-api",
     "test:db:stop": "yarn test:env docker-compose -f test/docker-compose.test.yml down",
     "test": "yarn test:env jest --runInBand --verbose --forceExit --detectOpenHandles",
     "test:watch": "yarn test --watch",
