--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   "scripts": {
     "format": "prettier --write src/**/*.ts",
     "lint": "eslint src/**/*.ts",
-    "test:env": "dotenv -e test/.test.env --",
-    "test:db:start": "yarn test:env docker-compose -f test/docker-compose.test.yml up --force-recreate -d",
-    "test:db:stop": "yarn test:env docker-compose -f test/docker-compose.test.yml down",
+    "test:env": "dotenv -e test/.env --",
     "test": "yarn test:env jest --runInBand --verbose --forceExit --detectOpenHandles",
     "test:watch": "yarn test --watch",
     "test:coverage": "yarn test --coverage",
     "mig:gen": "ts-node ./node_modules/.bin/typeorm migration:generate",
     "mig:run": "ts-node ./node_modules/.bin/typeorm migration:run",
     "doc:api": "yarn swaggerGen -c ./swaggerConfig.json -p ./tsconfig.json ",
-    "start:dev": "ts-node src/index.ts",
+    "dev:env": "dotenv -e dev/.env -- ",
+    "start:dev": "yarn dev:env ts-node src/index.ts",
     "build": "tsc",
-    "start": "node build/index.js"
+    "start": "yarn dev:env node build/index.js"
   },
   "husky": {
     "hooks": {
